fixed issues with desktop nav having width meant for mobile nav, added animation mixin on nav and bottom buttons for stretch

--- a/css/index.css
+++ b/css/index.css
@@ -183,13 +183,14 @@ img {
   }
 }
 .navigation h1 {
-  width: 100%;
+  width: 40%;
   text-align: center;
 }
 @media (max-width:500px) {
   .navigation h1 {
     font-size: 3rem;
     margin: 10px 0;
+    width: 40%;
   }
 }
 .navigation div {
@@ -209,6 +210,12 @@ img {
   color: black;
   width: 24%;
   font-size: 1.6rem;
+}
+.navigation div a:hover {
+  background: #23a0b6;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
 }
 @media (max-width:500px) {
   .navigation div a {
@@ -384,9 +391,21 @@ img {
   padding: 13px 0;
   margin: 0px 15% 0 0;
 }
+.home .content-pick .destination .btn:hover {
+  background: #23a0b6;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+}
 @media (max-width:500px) {
   .home .content-pick .destination .btn {
     width: 100%;
     background-color: #23a0b6;
+  }
+  .home .content-pick .destination .btn:hover {
+    background: #0a7f7f;
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
   }
 }
