--- a/less/home-page.less
+++ b/less/home-page.less
@@ -126,9 +126,16 @@
         text-align: center;
         padding: 13px 0;
         margin: 0px 15% 0 0;
+
+        &:hover {
+          .animate (#23a0b6);
+        }
         @media @mobile {
           width: 100%;
           background-color: #23a0b6;
+          &:hover {
+            .animate (@button-bg);
+          }
         }
       }
     }
