--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,3 +10,10 @@
   width: 100%;
   margin: 0 auto;
 }
+
+.animate (@color) {
+  background: @color;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+}
