--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,12 +12,13 @@
     padding: 0 5% 0;
   }
   h1 {
-    width: 100%;
+    width: 40%;
     text-align: center;
 
     @media @mobile {
       font-size: 3rem;
       margin: 10px 0;
+      width: 40%;
     }
   }
 
@@ -37,6 +38,9 @@
       width: 24%;
       font-size: 1.6rem;
 
+      &:hover {
+        .animate(#23a0b6);
+      }
       @media @mobile {
         width: 20%;
         margin-bottom: 10px;
